# sly

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml  requirements.txt  shell.nix  sly.py
sly/: __init__.py  cli.py  config.py  font_utils.py  image_utils.py  slideshow.py  utils.py  video_utils.py
tests/: README_tests.md  __init__.py  conftest.py  test_cli.py  test_config.py  test_font_utils.py  test_image_utils.py  test_integration.py  test_property_based.py  test_real_assets_showcase.py  test_slideshow.py  test_utils.py  test_video_utils.py
